--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -220,7 +220,7 @@
 						<div class="card-body">
 							<h5 class="card-title">Using The LRCFS File Renamer</h5>
 							<p class="card-text">If this is your first time using the LRCFS File Renamer make sure to check out the full set of instructions.</p>
-							<a class="btn btn-primary" href="https://lrcfs.dundee.ac.uk/file-renamer/downloads/readme.pdf" role="button" target="_blank">View Usage Instructions</a>
+							<a class="btn btn-primary" href="https://github.com/LRCFS/lrcfs-file-renamer#lrcfs-file-renamer" role="button" target="_blank">View Usage Instructions</a>
 						</div>
 					</div>
 					<div class="card text-center mt-2">
