--- a/www-download/index.html
+++ b/www-download/index.html
@@ -51,22 +51,21 @@
 	<h1>LRCFS File Renamer</h1>
 	<p>The LRCFS File Renamer is an application designed to automate the process of renaming large amount of files based on metadata.</p>
 	<p>With this application you can automatically rename hundreds of files from: <strong>DCS_0002.jpg</strong> to <strong>20201231-Exp1-Rep2-UVLIGHT.jpg</strong> while simultaneously checking that data is valid for submission to our <a href="https://lrcfs.dundee.ac.uk/transfer-and-persistence-submission/">Transfer and Persistance projects</a>.</p>
-	<p>Download the LRCFS File Renamer by clicking on the relevant link below for Windows and Mac. There are also instructions for use and an example data set to get you started. Please credit the Leverhulme Trust and LRCFS in publications where the LRCFS File Renamer is used.</p>
-	<p><a href="https://doi.org/10.5281/zenodo.4745515"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.4745515.svg" alt="DOI"></a></p>
+	<p>Download the LRCFS File Renamer by clicking on the relevant link below for Windows and Mac. There are also instructions for use and an example data set to get you started.</p>
+	<p>Please credit the Leverhulme Trust and LRCFS in publications where the LRCFS File Renamer is used: <a href="https://doi.org/10.5281/zenodo.4745515"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.4745515.svg" alt="DOI"></a></p>
 	<div id="windowsDownload">
-		<a href="downloads/LRCFS.File.Renamer-1.0.0.exe" title="Download the LRCFS File Renamer for Windows"><img src="img/win-download.png" alt="Download for Windows"/></a>
+		<a href="https://github.com/LRCFS/lrcfs-file-renamer/releases/download/1.0.0/LRCFS.File.Renamer-1.0.0-Windows.exe" title="Download the LRCFS File Renamer for Windows"><img src="img/win-download.png" alt="Download for Windows"/></a>
 	</div>
 	<div id="macDownload">
-		<a href="downloads/LRCFS.File.Renamer-1.0.0.dmg" title="Download the LRCFS File Renamer for Mac"><img src="img/mac-download.png" alt="Download for Mac"/></a>
+		<a href="https://github.com/LRCFS/lrcfs-file-renamer/releases/download/1.0.0/LRCFS.File.Renamer-1.0.0-Mac.dmg" title="Download the LRCFS File Renamer for Mac"><img src="img/mac-download.png" alt="Download for Mac"/></a>
 	</div>
 	<div id="readme">
 		<a href="downloads/readme.pdf" target="_blank" title="Download the LRCFS File Renamer usage instructions"><img src="img/instructions.png" alt="Download Instructions"/></a>
 	</div>
 	<div id="exampleData">
-		<a href="downloads/LRCFS.File.Renamer-Example.Data.zip" target="_blank" title="Download the LRCFS File Renamer example dataset"><img src="img/example-data.png" alt="Example Data"/></a>
+		<a href="https://github.com/LRCFS/lrcfs-file-renamer/releases/download/1.0.0/LRCFS.File.Renamer-Example.Data.zip" target="_blank" title="Download the LRCFS File Renamer example dataset"><img src="img/example-data.png" alt="Example Data"/></a>
 	</div>
 	<div class="clear">&nbsp;</div>
 	<p>For more details please visit the <a href="https://github.com/LRCFS/lrcfs-file-renamer">LRCFS File Renamer GitHub</a>.
 </body>
 </html>
-
