--- a/www-download/index.html
+++ b/www-download/index.html
@@ -49,8 +49,8 @@
 	</center>
 	<br /><br />
 	<h1>LRCFS File Renamer</h1>
-	<p>The LRCFS File Renamer is an application designed to automate the process of renaming large amount of files based on metadata.</p>
-	<p>With this application you can automatically rename hundreds of files from: <strong>DCS_0002.jpg</strong> to <strong>20201231-Exp1-Rep2-UVLIGHT.jpg</strong> while simultaneously checking that data is valid for submission to our <a href="https://lrcfs.dundee.ac.uk/transfer-and-persistence-submission/">Transfer and Persistance projects</a>.</p>
+	<p>The LRCFS File Renamer is an application designed to automate the process of renaming large numbers of files based on metadata.</p>
+	<p>This application has been developed to help you automatically rename files based on a single metadata (.csv) file. This will enable submission of your data to the LRCFS <a href="https://lrcfs.dundee.ac.uk/transfer-and-persistence-submission/">Transfer and Persistance projects</a>.</p>
 	<p>Download the LRCFS File Renamer by clicking on the relevant link below for Windows and Mac. There are also instructions for use and an example data set to get you started.</p>
 	<p>Please credit the Leverhulme Trust and LRCFS in publications where the LRCFS File Renamer is used: <a href="https://doi.org/10.5281/zenodo.4745515"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.4745515.svg" alt="DOI"></a></p>
 	<div id="windowsDownload">
