--- a/www-download/index.html
+++ b/www-download/index.html
@@ -60,7 +60,7 @@
 		<a href="https://github.com/LRCFS/lrcfs-file-renamer/releases/download/1.0.0/LRCFS.File.Renamer-1.0.0-Mac.dmg" title="Download the LRCFS File Renamer for Mac"><img src="img/mac-download.png" alt="Download for Mac"/></a>
 	</div>
 	<div id="readme">
-		<a href="downloads/readme.pdf" target="_blank" title="Download the LRCFS File Renamer usage instructions"><img src="img/instructions.png" alt="Download Instructions"/></a>
+		<a href="https://github.com/LRCFS/lrcfs-file-renamer/raw/master/readme.docx" target="_blank" title="Download the LRCFS File Renamer usage instructions"><img src="img/instructions.png" alt="Download Instructions"/></a>
 	</div>
 	<div id="exampleData">
 		<a href="https://github.com/LRCFS/lrcfs-file-renamer/releases/download/1.0.0/LRCFS.File.Renamer-Example.Data.zip" target="_blank" title="Download the LRCFS File Renamer example dataset"><img src="img/example-data.png" alt="Example Data"/></a>
