Added forced text wrap to filename example

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -287,7 +287,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-8">
+					<div class="col-8" id="exampleFilenameContainer">
 						<hr/>
 						<h4>Example Renamed File</h4>
 						<p>The required metadata columns will be used to generate new filenames in the following format:</p>
