Updated file links

--- a/www-download/index.html
+++ b/www-download/index.html
@@ -54,10 +54,10 @@
 	<p>Download the LRCFS File Renamer by clicking on the relevant link below for Windows and Mac. There are also instructions for use and an example data set to get you started.</p>
 	<p>Please credit the Leverhulme Trust and LRCFS in publications where the LRCFS File Renamer is used: <a href="https://doi.org/10.5281/zenodo.4745515"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.4745515.svg" alt="DOI"></a></p>
 	<div id="windowsDownload">
-		<a href="https://github.com/LRCFS/lrcfs-file-renamer/releases/download/1.1.0/LRCFS.File.Renamer-1.1.0-Windows.exe" title="Download the LRCFS File Renamer for Windows"><img src="img/win-download.png" alt="Download for Windows"/></a>
+		<a href="https://github.com/LRCFS/lrcfs-file-renamer/releases/download/1.1.0/LRCFS.File.Renamer-1.1.0-win.exe" title="Download the LRCFS File Renamer for Windows"><img src="img/win-download.png" alt="Download for Windows"/></a>
 	</div>
 	<div id="macDownload">
-		<a href="https://github.com/LRCFS/lrcfs-file-renamer/releases/download/1.1.0/LRCFS.File.Renamer-1.1.0-Mac.dmg" title="Download the LRCFS File Renamer for Mac"><img src="img/mac-download.png" alt="Download for Mac"/></a>
+		<a href="https://github.com/LRCFS/lrcfs-file-renamer/releases/download/1.1.0/LRCFS.File.Renamer-1.1.0-mac.dmg" title="Download the LRCFS File Renamer for Mac"><img src="img/mac-download.png" alt="Download for Mac"/></a>
 	</div>
 	<div id="readme">
 		<a href="https://github.com/LRCFS/lrcfs-file-renamer/raw/master/readme.docx" target="_blank" title="Download the LRCFS File Renamer usage instructions"><img src="img/instructions.png" alt="Download Instructions"/></a>
